feat: Update tests to use byte arrays for writing translation files and enhance documentation for combined locales, async preloading, and resource cleanup