@@ -7,6 +7,7 @@ import org.junit.jupiter.api.io.TempDir;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.charset.StandardCharsets;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -26,10 +27,10 @@ public class CubisLangShutdownTest {
         Files.createDirectories(langDir);
 
         // Create test translation files
-        Files.writeString(langDir.resolve("en.json"),
-                "{\"greeting\": \"Hello\", \"farewell\": \"Goodbye\"}");
-        Files.writeString(langDir.resolve("km.json"),
-                "{\"greeting\": \"សួស្តី\", \"farewell\": \"លាហើយ\"}");
+        Files.write(langDir.resolve("en.json"),
+                "{\"greeting\": \"Hello\", \"farewell\": \"Goodbye\"}".getBytes(StandardCharsets.UTF_8));
+        Files.write(langDir.resolve("km.json"),
+                "{\"greeting\": \"សួស្តី\", \"farewell\": \"លាហើយ\"}".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
